# RAG_pipeline_from_scratch

./: main.py  pyproject.toml  requirements.txt
data/json/: linear_ode_auto_000.json
data/text_files/: machine_learning.txt  python_intro.txt
data/vector_store/: chroma.sqlite3
notebook/: document.ipynb
